# nanosdr

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
nanodsp/: CMakeLists.txt  license.txt
nanodsp/src/: CMakeLists.txt  datatypes.h  translate.cpp  translate.h
nanodsp/tests/: CMakeLists.txt  test_translate.cpp
nanorx/: CMakeLists.txt  main.cpp
